test/TypeCoercion/subtyping.code
// RUN: %target-typecheck-verify-language

protocol CustomStringConvertible {
  fn print()
}

struct TestFormat {}

protocol FormattedPrintable : CustomStringConvertible { 
  fn print(_: TestFormat)
}

struct IsPrintable1 : CustomStringConvertible {
  fn print() {}
}

fn accept_creates_Printable (_: () -> CustomStringConvertible) {}
fn accept_creates_FormattedPrintable (_: () -> FormattedPrintable) {}

fn fp_to_p(_ fp: FormattedPrintable) -> CustomStringConvertible { return fp; }
fn p_to_fp(_ p: CustomStringConvertible) -> FormattedPrintable { }
fn p_to_ip1(_ p: CustomStringConvertible) -> IsPrintable1 { }

fn protocolConformance(ac1: @autoclosure () -> CustomStringConvertible,
                         ac2: @autoclosure () -> FormattedPrintable,
                         ip1: @autoclosure () -> IsPrintable1) {
  var f1 : (_ fp : FormattedPrintable) -> CustomStringConvertible = fp_to_p
  var f2 : (_ p : CustomStringConvertible) -> FormattedPrintable = p_to_fp
  immutable f3 : (_ p : CustomStringConvertible) -> IsPrintable1 = p_to_ip1

  // FIXME: closures make ABI conversions explicit. rdar://problem/19517003
  f1 = { f2($0) } // okay
  f1 = { f3($0) } // okay
  f2 = f1 // expected-error{{cannot assign value of type '(any FormattedPrintable) -> any CustomStringConvertible' to type '(any CustomStringConvertible) -> any FormattedPrintable'}}

  accept_creates_Printable(ac1)
  accept_creates_Printable({ ac2() })
  accept_creates_Printable({ ip1() })
  accept_creates_FormattedPrintable(ac1) // expected-error{{cannot convert value of type '() -> any CustomStringConvertible' to expected argument type '() -> any FormattedPrintable'}}
  accept_creates_FormattedPrintable(ac2)
  accept_creates_FormattedPrintable(ip1) // expected-error{{cannot convert value of type '() -> IsPrintable1' to expected argument type '() -> any FormattedPrintable'}}
}

fn p_gen_to_fp(_: () -> CustomStringConvertible) -> FormattedPrintable {}
fn fp_gen_to_p(_: () -> FormattedPrintable) -> CustomStringConvertible {}

fn nonTrivialNested() {
  // FIXME: closures make ABI conversions explicit. rdar://problem/19517003
  var f1 : (_ : () -> CustomStringConvertible) -> CustomStringConvertible = { p_gen_to_fp($0) }
  immutable f2 : (_ : () -> CustomStringConvertible) -> FormattedPrintable = p_gen_to_fp
  immutable f3 : (_ : () -> FormattedPrintable) -> CustomStringConvertible = fp_gen_to_p

  f1 = { f2($0) } // okay
  f1 = f3 // expected-error{{cannot assign value of type '(() -> any FormattedPrintable) -> any CustomStringConvertible' to type '(() -> any CustomStringConvertible) -> any CustomStringConvertible'}}
  _ = f1
}
